YaCy: The Search Engine with the friendly whale

version 0.424svn
	* ADDED: additional Shutdownmethod to run YaCy as Windows Service (theli)
	* ADDED: possibility to import the crawling queue (theli)
	* UPDATED: German translations (NN, rramthun)
	* UPDATED: minor enhancements to the webinterface (rramthun)
	* UPDATED: Memorysettings now also working for Windows (Galaxis, VT100)
	* UPDATED: added more informations to network.xml, added possibility to limit number of results (hendi)
	* FIXED: some Filemodes were set wrong (theli)
	* FIXED: minor bug-fix in Cache for some rare URLs (borg-0300)
	* ADDED: The YaCy-Bookmarkssystem (allo)

version 0.40 (8/21/2005):
	* The Server now provides the virtuel Header IS_ADMIN (Alexander Schier)
	* Improved German Translation (Roland Ramthun, Oliver Wunder)
	* The Wiki now has cites and definitionlists (Marc Nause)
	* If there are more than 10 DHT-entries while doing an inden transfer,
	these entries will also be appened to the index list (Martin Thelia)
	* Before the Crawler retries to download an URL it checks if the server
	ist already doing a shutdown (Martin Thelian)
	* Using a Timeout in the Crawler to establish a connection (Martin
	Thelian)
	* Tried to solve the "de.anomic.plasma.plasmaSwitchboard.deQueue': null"
	Bug (Martin Thelian)

