@@ -78,7 +78,7 @@ public class Messages_p {
 
         // first reset notification
         File notifierSource = new File(switchboard.getRootPath(), switchboard.getConfig("htRootPath", "htroot") + "/env/grafics/empty.gif");
-        File notifierDest = new File(switchboard.getRootPath(), switchboard.getConfig("htRootPath", "htroot") + "/env/grafics/notifier.gif");
+        File notifierDest = new File(switchboard.getConfig("htDocsPath", "DATA/HTDOCS"), "notifier.gif");
         try {
             serverFileUtils.copy(notifierSource, notifierDest);
         } catch (IOException e) {
